test-fixtures/machine-dsl-tests/tests/compile_fail/state_phase_as_str_absent.rs
fn main() {
    let state = meerkat_machine_kernels::generated::meerkat::initial_state();
    let _ = state.phase.as_str();
}
